--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,10 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
-dependencies:
+dependencies: 
+  timelines: ^0.1.0
   flutter:
+
     sdk: flutter
 
 
@@ -50,6 +52,8 @@ flutter:
     - images/flutter-lockup-f.png
     - images/gridview-extent-.png
     - images/new-flutter.png
+    - images/ROSE-FLOWER.png
+    - images/FLOWER.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
